# DocProcessor

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
doc_processor/: __init__.py  categorizer.py  config.py  exceptions.py  extractor.py  main.py  models.py  utils.py
tests/: conftest.py  test_categorizer.py  test_models.py  test_utils.py
