[project]
name = "doc-processor"
version = "0.1.0"
description = "PDF and image document extraction and AI categorization pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "anthropic>=0.40.0",
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.13",
    "Pillow>=10.0.0",
]

[project.scripts]
doc-processor = "doc_processor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
