[project]
name = "doc-processor"
version = "0.1.0"
description = "PDF and image document extraction and AI categorization pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["pdf", "ocr", "document", "ai", "categorization", "tesseract", "claude"]
dependencies = [
    "anthropic>=0.40.0",
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.13",
    "Pillow>=10.0.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
]

[project.scripts]
doc-processor = "doc_processor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["doc_processor"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
